- Made a function inside the model.php for stopping the code and exiting with a alert. dieWithAlert()
- Replaced individual die and alert with the function dieWithAlert()
- Proposal page now done (not including admin functionality)

+

- Fixed user logging out while on proposal page still granting them access to proposals.
- Admins can now delete or edit anyones post.
- isUserLoggedIn function moved from generalFunctions to model class.
- Fixed a massive bug where comma's couldnt be put in any input due to them being used as a seperator.
- Started working on the admin panels for accepting/denying subject proposals.

+

- Add and collapse buttons now show a pointer cursor when hovered
- Admins can now approve and reject suggested subjects

+ 

- Quotes no longer break the whole proposal admin panels when put in proposals.

+ 

- Fixed incorrect escaping and all related problems and bugs in header locationbar, content, primarysub, secondary sub, createPost, postPage.
- Added validation to prevent a secondary subject from having the same name as the primary subject its under. 
- Added validation to prevent a secondary subject from already existing under the same primary subject.
- It seems these issues are fixed, further testing is required.

+

- Fixed a bug which would cause secondary subjects with the same name but different primaries to be displayed under all primaries with this secondary subject.
- Added documentation to the primarySubjectModel
- Fixed a bug causing previewposts to not be shown inside secondary subject page.
- Fixed a bug of post previews not opening when clicked.
- Fixed a bug that was showing any time under a hour as less then a minute ago instead of x minutes.
- Fixed a bug preventing posts that had quotation marks in the post and in their secondary subject to be edited or deleted.
- Fixed a bug causing new secondary subjects to be added under the approver its name instead of the primary suspect.

+ 

