@@ -22,7 +22,7 @@ table
 .header 		
 {
 	position: absolute;
-	min-width: 40em;
+	min-width: 55em;
 	width: 100vw;
 	height: 6em;
 	top: 0px;
