@@ -23,7 +23,7 @@ a:hover
 		background-position: 100%;
 		background-size: 1500px;
 		background-repeat: repeat-y;
-		height: 100%;
+		min-height: 100%;
 
 }
 
@@ -197,6 +197,7 @@ a:hover
   margin-right: auto;
   z-index: 999999;
   min-height: 1em;
+  font-family: "Roboto";
 
 }
 
